--- a/1_b_programming_concepts.ipynb
+++ b/1_b_programming_concepts.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,8 @@
       "<class 'int'>\n",
       "<class 'float'>\n",
       "<class 'str'>\n",
-      "<class 'bool'>\n"
+      "<class 'bool'>\n",
+      "2\n"
      ]
     }
    ],
@@ -35,7 +36,7 @@
     "print(type(1))\n",
     "print(type(1.2))\n",
     "print(type(\"hi there\"))\n",
-    "print(type(True))"
+    "print(type(False))"
    ]
   },
   {
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -60,14 +61,59 @@
      "text": [
       "<class 'tuple'>\n",
       "<class 'list'>\n",
-      "<class 'dict'>\n"
+      "<class 'dict'>\n",
+      "[1, 7, 2, 9]\n",
+      "[1, 7, 2, 9, 100]\n",
+      "[1, 7, 2, 9, 100]\n",
+      "7\n",
+      "20\n"
      ]
     }
    ],
    "source": [
     "print(type((1,2)))\n",
     "print(type([1,2,3]))\n",
-    "print(type({\"a\":1, \"b\":2, \"c\":3}))"
+    "print(type({\"a\":1, \"b\":2, \"c\":3}))\n",
+    "\n",
+    "\n",
+    "a = [1, 7, 2, 9]\n",
+    " #idx 0 1  2  3\n",
+    "b = (1, 7, 2, 9)\n",
+    "# lists \n",
+    "#  - use square brackets\n",
+    "#  - can be modified\n",
+    "# tuples \n",
+    "#  - use curved brackets\n",
+    "#  - cannot be modified\n",
+    "print(a)\n",
+    "a.append(100)\n",
+    "print(a)\n",
+    "\n",
+    "print(a)\n",
+    "\n",
+    "# Lists and tuples have indexes\n",
+    "# Indexes are how we retrieve values from the list/tuples\n",
+    "# Indexes start from 0\n",
+    "\n",
+    "# At index 0, we have the number 1\n",
+    "# At index 1, we have hte number 7\n",
+    "# ...\n",
+    "\n",
+    "print(a[1])\n",
+    "\n",
+    "grades = {\n",
+    "    \"michael\" : 20,\n",
+    "    \"sarah\" : 99,\n",
+    "    \"john\" : 50,\n",
+    "}\n",
+    "print(grades[\"michael\"])\n",
+    "\n",
+    "grades = {\n",
+    "    True : \"Yes\",\n",
+    "    False : \"No\"\n",
+    "}\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -92,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +150,8 @@
     }
    ],
    "source": [
-    "print(\"put your answer here\")"
+    "print(\"put your answer here\")\n",
+    "my_tuple = (1, 'a', True)"
    ]
   },
   {
@@ -141,7 +188,8 @@
     }
    ],
    "source": [
-    "print(\"put your answer here\")"
+    "print(\"put your answer here\")\n",
+    "my_list = [1, 10, 100, 1000]"
    ]
   },
   {
@@ -178,7 +226,14 @@
     }
    ],
    "source": [
-    "print(\"put your answer here\")"
+    "print(\"put your answer here\")\n",
+    "\n",
+    "my_dictionary = {\n",
+    "    \"one\" : 1,\n",
+    "    \"ten\" : 10,\n",
+    "    \"hundred\" : 100,\n",
+    "    \"thousand\" : 1000,\n",
+    "}"
    ]
   },
   {
@@ -219,6 +274,8 @@
     "name = 1\n",
     "print(name)\n",
     "\n",
+    "myvar = name\n",
+    "\n",
     "# solution goes here"
    ]
   }
@@ -239,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
