--- a/3_b_masks.ipynb
+++ b/3_b_masks.ipynb
@@ -12,29 +12,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Product code</th>\n",
+       "      <th>Bureau of Meteorology station number</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Rainfall amount (millimetres)</th>\n",
+       "      <th>Period over which rainfall was measured (days)</th>\n",
+       "      <th>Quality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>47045</td>\n",
+       "      <td>1933</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>47045</td>\n",
+       "      <td>1933</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>47045</td>\n",
+       "      <td>1933</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>47045</td>\n",
+       "      <td>1933</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>47045</td>\n",
+       "      <td>1933</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32288</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>47045</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>5</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32289</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>47045</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>5</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32290</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>47045</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>5</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32291</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>47045</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>5</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32292</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>47045</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>5</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>32293 rows × 8 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0         True\n",
-       "1         True\n",
-       "2         True\n",
-       "3         True\n",
-       "4         True\n",
-       "         ...  \n",
-       "32288    False\n",
-       "32289    False\n",
-       "32290    False\n",
-       "32291    False\n",
-       "32292    False\n",
-       "Name: Year, Length: 32293, dtype: bool"
+       "      Product code  Bureau of Meteorology station number  Year  Month  Day  \\\n",
+       "0       IDCJAC0009                                 47045  1933      1    1   \n",
+       "1       IDCJAC0009                                 47045  1933      1    2   \n",
+       "2       IDCJAC0009                                 47045  1933      1    3   \n",
+       "3       IDCJAC0009                                 47045  1933      1    4   \n",
+       "4       IDCJAC0009                                 47045  1933      1    5   \n",
+       "...            ...                                   ...   ...    ...  ...   \n",
+       "32288   IDCJAC0009                                 47045  2021      5   27   \n",
+       "32289   IDCJAC0009                                 47045  2021      5   28   \n",
+       "32290   IDCJAC0009                                 47045  2021      5   29   \n",
+       "32291   IDCJAC0009                                 47045  2021      5   30   \n",
+       "32292   IDCJAC0009                                 47045  2021      5   31   \n",
+       "\n",
+       "       Rainfall amount (millimetres)  \\\n",
+       "0                                NaN   \n",
+       "1                                NaN   \n",
+       "2                                NaN   \n",
+       "3                                NaN   \n",
+       "4                                NaN   \n",
+       "...                              ...   \n",
+       "32288                            0.0   \n",
+       "32289                            0.0   \n",
+       "32290                            0.0   \n",
+       "32291                            0.0   \n",
+       "32292                            0.0   \n",
+       "\n",
+       "       Period over which rainfall was measured (days) Quality  \n",
+       "0                                                 NaN     NaN  \n",
+       "1                                                 NaN     NaN  \n",
+       "2                                                 NaN     NaN  \n",
+       "3                                                 NaN     NaN  \n",
+       "4                                                 NaN     NaN  \n",
+       "...                                               ...     ...  \n",
+       "32288                                             NaN       N  \n",
+       "32289                                             NaN       N  \n",
+       "32290                                             NaN       N  \n",
+       "32291                                             NaN       N  \n",
+       "32292                                             NaN       N  \n",
+       "\n",
+       "[32293 rows x 8 columns]"
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -49,7 +239,12 @@
     "mask = year < 1934\n",
     "\n",
     "mask\n",
-    "\n"
+    "\n",
+    "\n",
+    "print('-------')\n",
+    "mask_year_below_1934 = wentworth[\"Day\"] < 1934\n",
+    "rows_less_then_1934 = wentworth[mask_year_below_1934]\n",
+    "display(rows_less_then_1934)"
    ]
   },
   {
@@ -297,217 +492,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Product code</th>\n",
-       "      <th>Bureau of Meteorology station number</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Month</th>\n",
-       "      <th>Day</th>\n",
-       "      <th>Rainfall amount (millimetres)</th>\n",
-       "      <th>Period over which rainfall was measured (days)</th>\n",
-       "      <th>Quality</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>IDCJAC0009</td>\n",
-       "      <td>47045</td>\n",
-       "      <td>1933</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>IDCJAC0009</td>\n",
-       "      <td>47045</td>\n",
-       "      <td>1933</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>IDCJAC0009</td>\n",
-       "      <td>47045</td>\n",
-       "      <td>1933</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>IDCJAC0009</td>\n",
-       "      <td>47045</td>\n",
-       "      <td>1933</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>IDCJAC0009</td>\n",
-       "      <td>47045</td>\n",
-       "      <td>1933</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>360</th>\n",
-       "      <td>IDCJAC0009</td>\n",
-       "      <td>47045</td>\n",
-       "      <td>1933</td>\n",
-       "      <td>12</td>\n",
-       "      <td>27</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Y</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>361</th>\n",
-       "      <td>IDCJAC0009</td>\n",
-       "      <td>47045</td>\n",
-       "      <td>1933</td>\n",
-       "      <td>12</td>\n",
-       "      <td>28</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Y</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>362</th>\n",
-       "      <td>IDCJAC0009</td>\n",
-       "      <td>47045</td>\n",
-       "      <td>1933</td>\n",
-       "      <td>12</td>\n",
-       "      <td>29</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Y</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>363</th>\n",
-       "      <td>IDCJAC0009</td>\n",
-       "      <td>47045</td>\n",
-       "      <td>1933</td>\n",
-       "      <td>12</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Y</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>364</th>\n",
-       "      <td>IDCJAC0009</td>\n",
-       "      <td>47045</td>\n",
-       "      <td>1933</td>\n",
-       "      <td>12</td>\n",
-       "      <td>31</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Y</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>365 rows × 8 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    Product code  Bureau of Meteorology station number  Year  Month  Day  \\\n",
-       "0     IDCJAC0009                                 47045  1933      1    1   \n",
-       "1     IDCJAC0009                                 47045  1933      1    2   \n",
-       "2     IDCJAC0009                                 47045  1933      1    3   \n",
-       "3     IDCJAC0009                                 47045  1933      1    4   \n",
-       "4     IDCJAC0009                                 47045  1933      1    5   \n",
-       "..           ...                                   ...   ...    ...  ...   \n",
-       "360   IDCJAC0009                                 47045  1933     12   27   \n",
-       "361   IDCJAC0009                                 47045  1933     12   28   \n",
-       "362   IDCJAC0009                                 47045  1933     12   29   \n",
-       "363   IDCJAC0009                                 47045  1933     12   30   \n",
-       "364   IDCJAC0009                                 47045  1933     12   31   \n",
-       "\n",
-       "     Rainfall amount (millimetres)  \\\n",
-       "0                              NaN   \n",
-       "1                              NaN   \n",
-       "2                              NaN   \n",
-       "3                              NaN   \n",
-       "4                              NaN   \n",
-       "..                             ...   \n",
-       "360                            0.0   \n",
-       "361                            0.0   \n",
-       "362                            0.0   \n",
-       "363                            0.0   \n",
-       "364                            0.0   \n",
-       "\n",
-       "     Period over which rainfall was measured (days) Quality  \n",
-       "0                                               NaN     NaN  \n",
-       "1                                               NaN     NaN  \n",
-       "2                                               NaN     NaN  \n",
-       "3                                               NaN     NaN  \n",
-       "4                                               NaN     NaN  \n",
-       "..                                              ...     ...  \n",
-       "360                                             NaN       Y  \n",
-       "361                                             NaN       Y  \n",
-       "362                                             NaN       Y  \n",
-       "363                                             NaN       Y  \n",
-       "364                                             NaN       Y  \n",
-       "\n",
-       "[365 rows x 8 columns]"
+       "4383     0.0\n",
+       "4384     0.0\n",
+       "4385     0.0\n",
+       "4386     0.0\n",
+       "4387     0.0\n",
+       "        ... \n",
+       "4743    13.7\n",
+       "4744     0.0\n",
+       "4745     0.0\n",
+       "4746     0.0\n",
+       "4747     0.0\n",
+       "Name: Rainfall amount (millimetres), Length: 365, dtype: float64"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "wentworth[wentworth[\"Year\"] < 1934]"
+    "wentworth[wentworth[\"Year\"] < 1934]\n",
+    "\n",
+    "# 1\n",
+    "mask_1945 = wentworth[\"Year\"] == 1945\n",
+    "rows_1945 = wentworth[mask_1945]['Rainfall amount (millimetres)']\n",
+    "display(rows_1945)\n",
+    "\n",
+    "# 2\n",
+    "mask_janurary = wentworth[\"Month\"] == 1\n",
+    "rows_janurary = wentworth[mask_janurary]['Rainfall amount (millimetres)']\n",
+    "\n",
+    "# 3\n",
+    "mask_janurary_1945 = (wentworth[\"Year\"] == 1945) & (wentworth[\"Month\"] == 1)\n",
+    "rows_combined = wentworth[mask_janurary_1945]['Rainfall amount (millimetres)']\n",
+    "\n",
+    "# 3 v2\n",
+    "rows_combined = wentworth[mask_1945 & mask_janurary]['Rainfall amount (millimetres)']"
    ]
   },
   {
@@ -519,6 +545,56 @@
     "# Exercise\n",
     "\n",
     "Show only the _rainfall amount_ (not the other columns) for January 1945 in Wentworth bu do it in just one line of Python!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4383    0.0\n",
+       "4384    0.0\n",
+       "4385    0.0\n",
+       "4386    0.0\n",
+       "4387    0.0\n",
+       "4388    0.0\n",
+       "4389    0.0\n",
+       "4390    0.0\n",
+       "4391    0.0\n",
+       "4392    0.0\n",
+       "4393    0.0\n",
+       "4394    0.0\n",
+       "4395    0.0\n",
+       "4396    0.0\n",
+       "4397    0.0\n",
+       "4398    0.0\n",
+       "4399    0.0\n",
+       "4400    0.0\n",
+       "4401    0.0\n",
+       "4402    0.0\n",
+       "4403    0.0\n",
+       "4404    0.0\n",
+       "4405    0.0\n",
+       "4406    0.0\n",
+       "4407    0.0\n",
+       "4408    0.0\n",
+       "4409    0.0\n",
+       "4410    0.0\n",
+       "4411    0.0\n",
+       "4412    0.0\n",
+       "4413    0.0\n",
+       "Name: Rainfall amount (millimetres), dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(pandas.read_csv(\"data/rainfall/IDCJAC0009_047045_1800_Data.csv\")[(wentworth[\"Year\"] == 1945) & (wentworth[\"Month\"] == 1)]['Rainfall amount (millimetres)'])"
    ]
   }
  ],
@@ -538,7 +614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
