--- a/4_a_empty_values.ipynb
+++ b/4_a_empty_values.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "[4947 rows x 8 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -385,6 +385,470 @@
     "\n",
     "Try out `dropna` on the Mt Boyce data frame.  How many rows did you lose?  Can you explain why that many were lost?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Product code</th>\n",
+       "      <th>Bureau of Meteorology station number</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Rainfall amount (millimetres)</th>\n",
+       "      <th>Period over which rainfall was measured (days)</th>\n",
+       "      <th>Quality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>63292</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>63292</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>63292</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>63292</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>63292</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7754</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>63292</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>3</td>\n",
+       "      <td>26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8722</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>63292</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>11</td>\n",
+       "      <td>18</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8723</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>63292</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>11</td>\n",
+       "      <td>19</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9103</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>63292</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9221</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>63292</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>531 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Product code  Bureau of Meteorology station number  Year  Month  Day  \\\n",
+       "0      IDCJAC0009                                 63292  1994      1    1   \n",
+       "1      IDCJAC0009                                 63292  1994      1    2   \n",
+       "2      IDCJAC0009                                 63292  1994      1    3   \n",
+       "3      IDCJAC0009                                 63292  1994      1    4   \n",
+       "4      IDCJAC0009                                 63292  1994      1    5   \n",
+       "...           ...                                   ...   ...    ...  ...   \n",
+       "7754   IDCJAC0009                                 63292  2015      3   26   \n",
+       "8722   IDCJAC0009                                 63292  2017     11   18   \n",
+       "8723   IDCJAC0009                                 63292  2017     11   19   \n",
+       "9103   IDCJAC0009                                 63292  2018     12    4   \n",
+       "9221   IDCJAC0009                                 63292  2019      4    1   \n",
+       "\n",
+       "      Rainfall amount (millimetres)  \\\n",
+       "0                               NaN   \n",
+       "1                               NaN   \n",
+       "2                               NaN   \n",
+       "3                               NaN   \n",
+       "4                               NaN   \n",
+       "...                             ...   \n",
+       "7754                            NaN   \n",
+       "8722                            NaN   \n",
+       "8723                            NaN   \n",
+       "9103                            NaN   \n",
+       "9221                            NaN   \n",
+       "\n",
+       "      Period over which rainfall was measured (days) Quality  \n",
+       "0                                                NaN     NaN  \n",
+       "1                                                NaN     NaN  \n",
+       "2                                                NaN     NaN  \n",
+       "3                                                NaN     NaN  \n",
+       "4                                                NaN     NaN  \n",
+       "...                                              ...     ...  \n",
+       "7754                                             NaN     NaN  \n",
+       "8722                                             NaN     NaN  \n",
+       "8723                                             NaN     NaN  \n",
+       "9103                                             NaN     NaN  \n",
+       "9221                                             NaN     NaN  \n",
+       "\n",
+       "[531 rows x 8 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "531"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "531"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Product code</th>\n",
+       "      <th>Bureau of Meteorology station number</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Rainfall amount (millimetres)</th>\n",
+       "      <th>Period over which rainfall was measured (days)</th>\n",
+       "      <th>Quality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>514</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>63292</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>5</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>515</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>63292</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>5</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>516</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>63292</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>517</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>63292</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>522</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>63292</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10609</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>63292</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10617</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>63292</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>1</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10620</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>63292</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>1</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10623</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>63292</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10624</th>\n",
+       "      <td>IDCJAC0009</td>\n",
+       "      <td>63292</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4947 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Product code  Bureau of Meteorology station number  Year  Month  Day  \\\n",
+       "514     IDCJAC0009                                 63292  1995      5   30   \n",
+       "515     IDCJAC0009                                 63292  1995      5   31   \n",
+       "516     IDCJAC0009                                 63292  1995      6    1   \n",
+       "517     IDCJAC0009                                 63292  1995      6    2   \n",
+       "522     IDCJAC0009                                 63292  1995      6    7   \n",
+       "...            ...                                   ...   ...    ...  ...   \n",
+       "10609   IDCJAC0009                                 63292  2023      1   18   \n",
+       "10617   IDCJAC0009                                 63292  2023      1   26   \n",
+       "10620   IDCJAC0009                                 63292  2023      1   29   \n",
+       "10623   IDCJAC0009                                 63292  2023      2    1   \n",
+       "10624   IDCJAC0009                                 63292  2023      2    2   \n",
+       "\n",
+       "       Rainfall amount (millimetres)  \\\n",
+       "514                              0.0   \n",
+       "515                              0.0   \n",
+       "516                              0.0   \n",
+       "517                              0.0   \n",
+       "522                              0.0   \n",
+       "...                              ...   \n",
+       "10609                            0.0   \n",
+       "10617                            0.0   \n",
+       "10620                            0.0   \n",
+       "10623                            0.0   \n",
+       "10624                            0.0   \n",
+       "\n",
+       "       Period over which rainfall was measured (days) Quality  \n",
+       "514                                               NaN       N  \n",
+       "515                                               NaN       N  \n",
+       "516                                               NaN       N  \n",
+       "517                                               NaN       N  \n",
+       "522                                               NaN       N  \n",
+       "...                                               ...     ...  \n",
+       "10609                                             1.0       N  \n",
+       "10617                                             1.0       N  \n",
+       "10620                                             1.0       N  \n",
+       "10623                                             1.0       N  \n",
+       "10624                                             1.0       N  \n",
+       "\n",
+       "[4947 rows x 8 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "mask_nan = mtboyce['Rainfall amount (millimetres)'].isna()\n",
+    "display(mtboyce[mask_nan])\n",
+    "display(len(mtboyce[mask_nan]))\n",
+    "display(mask_nan.sum())\n",
+    "\n",
+    "mask_zero = mtboyce['Rainfall amount (millimetres)'] == 0\n",
+    "display(mtboyce[mask_zero])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10625\n",
+      "8658\n",
+      "1967\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(mtboyce))\n",
+    "nans_dropped = mtboyce.dropna()\n",
+    "print(len(nans_dropped))\n",
+    "print(len(mtboyce) - len(nans_dropped))"
+   ]
   }
  ],
  "metadata": {
@@ -403,7 +867,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
