--- a/1_a_writing_running.ipynb
+++ b/1_a_writing_running.ipynb
@@ -27,6 +27,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -38,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +94,9 @@
      "text": [
       "6\n",
       "7\n",
-      "8\n"
+      "8\n",
+      "10\n",
+      "100\n"
      ]
     }
    ],
@@ -111,23 +118,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "6"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "A1"
-   ]
+   "source": []
   },
   {
    "attachments": {},
@@ -141,20 +146,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "put solution to exercise here\n"
+      "put solution to exercise here\n",
+      "4\n",
+      "4\n"
      ]
     }
    ],
    "source": [
-    "print(\"put solution to exercise here\")"
+    "print(\"put solution to exercise here\")\n",
+    "C1 = B1 * 2\n",
+    "C2 = B2 * 2\n",
+    "C3 = B3 * 2\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "attachments": {},
@@ -193,19 +209,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-6\n",
-      "-6\n",
-      "this is a string\n",
-      "-6\n",
-      "this is a string\n",
-      "-6\n"
+      "-12\n",
+      "6\n",
+      "16\n",
+      "<class 'int'>\n",
+      "<class 'str'>\n"
      ]
     }
    ],
@@ -213,14 +228,14 @@
     "v = -6\n",
     "s = \"this is a string\"\n",
     "# print out double of whatever is stored in the variable `v`\n",
-    "print(v)\n",
+    "print(v * 2)\n",
     "# print out the absolute value of whatever is stored in the variable `v`\n",
-    "print(v)\n",
+    "print(abs(v))\n",
     "# print out the the number of characters in the variable `s`\n",
-    "print(s)\n",
+    "print(len(s))\n",
     "# print out the type of the values in both `v` and `s`\n",
-    "print(v)\n",
-    "print(s)"
+    "print(type(v))\n",
+    "print(type(s))"
    ]
   }
  ],
@@ -240,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
